# rusty_entertainement_center

./: .env.example  .gitignore  Cargo.toml  build.rs  library.db  specs.md
deploy/: copy-release.sh  rusty-entertainement-center.service
migrations/: 0001_init.sql
src/: main.rs
src/app/: mod.rs
src/app/browser/: mod.rs
src/app/browsing/: mod.rs
src/app/player/: mod.rs  mpv_gl.rs  state.rs  tracks.rs
src/app/probe/: mod.rs
src/app/volumes/: fake.rs  mod.rs  real.rs
src/browser/: mod.rs
src/browsing/: mod.rs
src/db/: connection.rs  database.rs  inspect.rs  media_repository.rs  migrations.rs  mod.rs  paths.rs  reconcile.rs  settings_repository.rs
src/db/sql/: init.sql
src/debug/: mod.rs
src/icons/: mod.rs
src/probe/: mod.rs
src/structs/: mod.rs
src/theme/: colors.slint  mod.rs  spacing.slint
src/ui/: app.slint  icon.slint  structs.slint
src/ui/help/: help.slint
src/ui/infos/: file_infos.slint  folder_infos.slint  volume_infos.slint
src/ui/player/: player_view.slint
src/ui/rows/: file_row.slint  folder_row.slint  space_row.slint  tree_row.slint  volume_row.slint
src/utils/: mod.rs
src/watch/: mod.rs
