[package]
name = "rusty-entertainement-center"
build = "build.rs"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["desktop"]
desktop = ["slint/backend-winit"]
# Direct DRM/KMS rendering — no X11/Wayland desktop (Raspberry Pi kiosk).
kiosk = ["slint/backend-linuxkms-noseat"]

[dependencies]
notify = "8.0.0"
walkdir = "2.5.0"
slint = { version = "1.17.0", default-features = false, features = ["std", "compat-1-2", "renderer-femtovg"] }
i-slint-core = { version = "1.17.0", default-features = false }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
async-trait = "0.1.89"
libmpv2 = { version = "6.0", default-features = false, features = ["render"] }
glow = "0.16"
dotenvy = "0.15"

[build-dependencies]
slint-build = "1.17.0"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
